--- a/src/routes/category/category.styles.scss
+++ b/src/routes/category/category.styles.scss
@@ -1,6 +1,12 @@
-.categories-container{
+.category-container{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   column-gap: 20px;
   row-gap: 50px;
+}
+
+.category-title{
+  text-align: center;
+  font-size: 38px;
+  margin-bottom: 25px;
 }
